--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,7 @@ jobs:
           workflow: main.yml
           branch: master
           event: push
+          commit: ${{github.event.pull_request.head.sha}}
           name: build-${{ matrix.platform }}
           path: build
 
