UPDATE: Added itch user and gameid env var

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,8 @@ on:
       - '.github/**'
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+  ITCH_USERNAME: ${{ secrets.ITCH_USERNAME }}
+  ITCH_GAME_ID: ${{ secrets.ITCH_GAME_ID }}
   
 jobs:
  publishBuilds:
