--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,7 +54,7 @@ jobs:
           CHANNEL: ${{ matrix.channel }}
           ITCH_GAME: ${{ secrets.ITCH_GAME_ID }}
           ITCH_USER: ${{ secrets.ITCH_USERNAME }}
-          PACKAGE: build/WebGL # ${{ needs.downloadBuilds.outputs.matrix_platform }}"
+          PACKAGE: build/build-WebGL.zip # ${{ needs.downloadBuilds.outputs.matrix_platform }}"
 
   # notifyDiscord:
   #   needs: [releaseDraft, publishRelease]
