--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ env:
   
 jobs:
   getLatestRelease:
-    name: Get Latest Release
+    name: ✅ Get Latest Release
     runs-on: ubuntu-latest
     outputs:
       latest_version: ${{ steps.latest_release.outputs.release }}
@@ -25,7 +25,7 @@ jobs:
 
   publishWebGL:
     needs: getLatestRelease
-    name: Publish WebGL Build
+    name: 🌐 Publish WebGL Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -48,7 +48,7 @@ jobs:
 
   publishWindows:
     needs: getLatestRelease
-    name: Publish Win x64 Build
+    name: 🖥️ Publish Win x64 Build
     runs-on: ubuntu-latest
     steps:
       - name: Download artifact
@@ -68,7 +68,7 @@ jobs:
 
   notifyDiscord:
     needs: [getLatestRelease, publishWebGL, publishWindows]
-    name: Notify on Discord 📢
+    name: 📢 Notify on Discord
     if: always()
     runs-on: ubuntu-latest
     steps:
